# WubForge

./: ._build_and_distribute.sh  .gitmodules  BUILD.md  CMakeLists.txt  DESIGN.md  FilterAlgorithms.md  README.md  build_and_distribute.sh  build_minimal.sh
Source/: BandpassFractalFilter.cpp  BandpassFractalFilter.h  BitCrusher.cpp  BitCrusher.h  ChowEQModule.cpp  ChowEQModule.h  CombStack.cpp  CombStack.h  DistortionForge.cpp  DistortionForge.h  FMDistortModule.cpp  FMDistortModule.h  FibonacciSpiralDistort.cpp  FibonacciSpiralDistort.h  FormantTracker.cpp  FormantTracker.h  FormantTrackerModule.cpp  FormantTrackerModule.h  FractalFilter.cpp  FractalFilter.h  FractalFilterModule.cpp  FractalFilterModule.h  HarmonicRichFilter.cpp  HarmonicRichFilter.h  KeyTracker.cpp  KeyTracker.h  MDASubSynthModule.h  MDASubSynthModuleDirect.cpp  MDASubSynthModuleDirect.h  Module.h  ModuleSlotComponent.cpp  ModuleSlotComponent.h  ModuleWrappers.h  PluckModule.cpp  PluckModule.h  PluginEditor-new.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  (+19 more)
cline_docs/: codebaseSummary.md  currentTask.md  projectRoadmap.md  techStack.md
docs/: modules.md
docs/architecture/: README.md  currentTask.md  projectRoadmap.md
docs/modules/: README.md
